--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ Cheetah==2.4.4
 Flask==0.9
 Flask-Login==0.1.3
 Jinja2==2.8.1
-Landscape-Client==14.12
+Landscape-Client==latest
 MarkupSafe==0.23
 PAM==0.4.2
 PyYAML==3.10
